<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragments"
    app:startDestination="@id/menuItems">

    <fragment
        android:id="@+id/menuItems"
        android:name="hr.algebra.nasa.fragment.ItemsFragment"
        android:label="@string/items"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/menuAddItem"
        android:name="hr.algebra.nasa.fragment.AddItemFragment"
        android:label="@string/add_item"
        tools:layout="@layout/fragment_add_item" />

    <fragment
        android:id="@+id/menuAbout"
        android:name="hr.algebra.nasa.fragment.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>